lab5/software/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
01:27:02 **** Clean-only build of configuration Nios II for project lab5_APP ****
make clean 
[lab5_APP clean complete]
01:27:10 **** Build of configuration Nios II for project lab5_APP ****
make all 
Info: Building ../lab5_APP_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../lab5_APP_bsp/
[BSP build complete]
Info: Compiling main.c to obj/default/main.o
nios2-elf-gcc -xc -MP -MMD -c -I../lab5_APP_bsp//HAL/inc -I../lab5_APP_bsp/ -I../lab5_APP_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/main.o main.c
main.c: In function 'pb_isr':
main.c:79:15: warning: implicit declaration of function 'deg2counts' [-Wimplicit-function-declaration]
   min_angle = deg2counts((int)*SW_Ptr);
               ^
main.c: At top level:
main.c:113:8: error: conflicting types for 'deg2counts'
 uint32 deg2counts(int degrees)
        ^
main.c:79:15: note: previous implicit declaration of 'deg2counts' was here
   min_angle = deg2counts((int)*SW_Ptr);
               ^
make: *** [obj/default/main.o] Error 1
01:27:11 **** Incremental Build of configuration Nios II for project lab5_APP_bsp ****
make all 
[BSP build complete]
01:29:29 **** Incremental Build of configuration Nios II for project lab5_APP ****
make all 
Info: Building ../lab5_APP_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../lab5_APP_bsp/
[BSP build complete]
Info: Compiling main.c to obj/default/main.o
nios2-elf-gcc -xc -MP -MMD -c -I../lab5_APP_bsp//HAL/inc -I../lab5_APP_bsp/ -I../lab5_APP_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/main.o main.c
Info: Linking lab5_APP.elf
nios2-elf-g++  -T'../lab5_APP_bsp//linker.x' -msys-crt0='../lab5_APP_bsp//obj/HAL/src/crt0.o' -msys-lib=hal_bsp -L../lab5_APP_bsp/  -msmallc  -Wl,-Map=lab5_APP.map   -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o lab5_APP.elf obj/default/main.o -lm -msys-lib=m
nios2-elf-insert lab5_APP.elf --thread_model hal --cpu_name nios2_gen2_0 --qsys true --simulation_enabled false --id 257 --sidp 0x11080 --timestamp 1744245470 --stderr_dev jtag_uart_0 --stdin_dev jtag_uart_0 --stdout_dev jtag_uart_0 --sopc_system_name nios_system --quartus_project_dir "C:/Users/steve/classes/ESD1/lab5" --jdi ../..//output_files/lab4_part2.jdi --sopcinfo C:/Users/steve/classes/ESD1/lab5/software/lab5_APP_bsp/../../nios_system.sopcinfo
Info: (lab5_APP.elf) 20 KBytes program size (code + initialized data).
Info:                10 KBytes free for stack + heap.
Info: Creating lab5_APP.objdump
nios2-elf-objdump --disassemble --syms --all-header --source lab5_APP.elf >lab5_APP.objdump
[lab5_APP build complete]
01:29:33 **** Incremental Build of configuration Nios II for project lab5_APP_bsp ****
make all 
[BSP build complete]
01:29:44 **** Incremental Build of configuration Nios II for project lab5_APP ****
make all 
Info: Building ../lab5_APP_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../lab5_APP_bsp/
[BSP build complete]
[lab5_APP build complete]
